--- a/cpuemu.html
+++ b/cpuemu.html
@@ -1103,7 +1103,7 @@ IchigoJam再現モード<select id="real_mode">
 <option value="10">1.0風</option>
 <option value="11">1.1風</option>
 <option value="12">1.2風</option>
-</select>
+</select> ※非公認
 </div>
 <div id='credit'>
 cpuemu a1 (for <a href=http://ichigojam.net/>IchigoJam</a>)<br>
