implement ADC instruction
--- test code 1 (expected: #44775588) ---

R1 = R15
R1 += #FC
PUSH {R4, R5, R6, R7, LR}
PUSH {R1}
R0 = 0 ' result
R1 = @data ' ptr
R2 = 8 ' case-count
R3 = 1 ' delta
@loop
LDM R1, {R4, R6}

R5 = R4
R7 = 0
R7 = R7 >> 1
ADC R5, R6
IF CC GOTO @noc1
R0 = R0 + R3
@noc1
R3 = R3 << 1

R5 = R4
R7 = 0
R7 = R7 >> 1
ADC R5, R6
IF VC GOTO @nov1
R0 = R0 + R3
@nov1
R3 = R3 << 1

R5 = R4
R7 = 1
R7 = R7 >> 1
ADC R5, R6
IF CC GOTO @noc2
R0 = R0 + R3
@noc2
R3 = R3 << 1

R5 = R4
R7 = 1
R7 = R7 >> 1
ADC R5, R6
IF VC GOTO @nov2
R0 = R0 + R3
@nov2
R3 = R3 << 1

R2 = R2 - 1
IF !0 GOTO @loop
POP {R1}
[R1 + 0]L = R0
POP {R4, R5, R6, R7, PC}
@data
DATAL #7fffffff
DATAL #00000000

DATAL #00000000
DATAL #7fffffff

DATAL #ffffffff
DATAL #7fffffff

DATAL #7fffffff
DATAL #ffffffff

DATAL #80000000
DATAL #ffffffff

DATAL #ffffffff
DATAL #80000000

DATAL #80000000
DATAL #7fffffff

DATAL #7fffffff
DATAL #80000000

-- driver --

?USR(#700,0)
?hex$([1],4);hex$([0],4)

--- a/cpuemu.html
+++ b/cpuemu.html
@@ -155,12 +155,13 @@ var CPU = function() {
 				this.status.n = (n >> 31) != 0;
 				return n;
 			};
-			this.addsetflg = function(n, m) {
+			this.addsetflg = function(n, m, carry = false) {
 				n = norm(n);
 				m = norm(m);
-				var r = norm(n + m);
+				var c = carry ? 1 : 0;
+				var r = norm(n + m + c);
 				var s = 0x80000000;
-				this.status.c = n + m > 0xffffffff;
+				this.status.c = n + m + c > 0xffffffff;
 				this.status.v = (n & s) == (m & s) && (n & s) != (r & s);
 				return this.setflg(r);
 			};
@@ -573,6 +574,9 @@ var CPU = function() {
 					this.r[getu(0, 3)] = this.setflg(norm((v >>> s2) | (v << (32 - s2))));
 					this.status.c = ((v >> (s2 - 1)) & 1) != 0;
 				}
+			} else if (chk("0100000101")) { // ADC Rd, Rm
+				this.clockCount++;
+				this.r[getu(0, 3)] = this.addsetflg(this.r[getu(0, 3)], this.r[getu(3, 3)], this.status.c);
 			} else if (chk("11001")) { // LDM Rn, {regs}
 				this.clockCount++;
 				var regs = getu(0, 8);
