--- a/cpuemu.html
+++ b/cpuemu.html
@@ -538,6 +538,22 @@ var CPU = function() {
 				v = ((v >>> 8) & 0x000000ff) | ((v << 8) & 0x0000ff00);
 				if (v & 0x8000) v |= 0xffff0000;
 				this.r[getu(0, 3)] = norm(v);
+			} else if (chk("1011001001")) { // Rd = SXTB(Rm)
+				this.clockCount++;
+				var v = this.r[getu(3, 3)] & 0xff;
+				if (v & 0x80) v |= 0xffffff00;
+				this.r[getu(0, 3)] = norm(v);
+			} else if (chk("1011001000")) { // Rd = SXTH(Rm)
+				this.clockCount++;
+				var v = this.r[getu(3, 3)] & 0xffff;
+				if (v & 0x8000) v |= 0xffff0000;
+				this.r[getu(0, 3)] = norm(v);
+			} else if (chk("1011001011")) { // Rd = UXTB(Rm)
+				this.clockCount++;
+				this.r[getu(0, 3)] = norm(this.r[getu(3, 3)] & 0xff);
+			} else if (chk("1011001010")) { // Rd = UXTH(Rm)
+				this.clockCount++;
+				this.r[getu(0, 3)] = norm(this.r[getu(3, 3)] & 0xffff);
 			} else if (chk("00010")) { // Rd = ASR(Rm, u5)
 				this.clockCount++;
 				var v = this.r[getu(3, 3)];
