first step to support RV32C (Rd += n6 and RET only)

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@ li {
 </textarea>
 </div>
 <input id="submit-button" value="assemble" type="button" onclick="assemble();">
+<input style="margin-left: 1em;" type="checkbox" id="rv32c_check">
+<label for="rv32c_check">RV32C</label>
 <script>
 window.onload = function() {
 	var hash = document.location.hash;
