--- a/rvasm.html
+++ b/rvasm.html
@@ -179,6 +179,8 @@ WFI	0	0	0	0	0	0	0	0	0	1	1	1	0	0	1	1	wfi
 
 </p><p>
 DATA: <a href=https://riscv.org/specifications/>Specifications - RISC-V Foundation</a><br>
-Text: CC BY <a href=https://ichigojam.net/>ichigojam.net</a><br>
+<a href="https://ichigojam.github.io/asm15/rvasm.html">Original</a> Text: CC BY <a href=https://ichigojam.net/>ichigojam.net</a><br>
+Modified By みけCAT<br>
+Modification: <a href="https://creativecommons.org/licenses/by/4.0/deed.ja">CC BY 4.0</a> by みけCAT
 
 </body></html>
