--- a/rvasm.html
+++ b/rvasm.html
@@ -169,43 +169,18 @@ WFI	0	0	0	0	0	0	0	0	0	1	1	1	0	0	1	1	wfi
 <table id="t9900a" class=tarmasm></table>
 <script>
 makeTable("t9900a", function() {/*
-32bit命令	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	op
+32bit代入	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	op
 LUI	n15-12				Rd					0	1	1	0	1	1	1	lui
 	n31-16																-
+*/})
+</script>
+
+<table id="t9901a" class=tarmasm></table>
+<script>
+makeTable("t9901a", function() {/*
+32bit演算	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	op
 AUIPC	n15-12				Rd					0	0	1	0	1	1	1	auipc
 	n31-16																-
-JAL	n15-12				Rd					1	1	0	1	1	1	1	jal
-	n20	n10-1										n11	n19-16				-
-JALR	Rs0	0	0	0	Rd					1	1	0	0	1	1	1	jalr
-	n12												Rs4-1				-
-BEQ	Rm0	0	0	0	n4-1				n11	1	1	0	0	0	1	1	beq
-	n12	n10-5						Rs					Rm4-1				-
-BNE	Rm0	0	0	1	n4-1				n11	1	1	0	0	0	1	1	bne
-	n12	n10-5						Rs					Rm4-1				-
-BLT	Rm0	1	0	0	n4-1				n11	1	1	0	0	0	1	1	blt
-	n12	n10-5						Rs					Rm4-1				-
-BGE	Rm0	1	0	1	n4-1				n11	1	1	0	0	0	1	1	bge
-	n12	n10-5						Rs					Rm4-1				-
-BLTU	Rm0	1	1	0	n4-1				n11	1	1	0	0	0	1	1	bltu
-	n12	n10-5						Rs					Rm4-1				-
-BGEU	Rm0	1	1	1	n4-1				n11	1	1	0	0	0	1	1	bgeu
-	n12	n10-5						Rs					Rm4-1				-
-LB	Rm0	0	0	0	Rd					0	0	0	0	0	1	1	lb
-	n12												Rm4-1				-
-LH	Rm0	0	0	1	Rd					0	0	0	0	0	1	1	lh
-	n12												Rm4-1				-
-LW	Rm0	0	1	0	Rd					0	0	0	0	0	1	1	lw
-	n12												Rm4-1				-
-LBU	Rm0	1	0	0	Rd					0	0	0	0	0	1	1	lbu
-	n12												Rm4-1				-
-LHU	Rm0	1	0	1	Rd					0	0	0	0	0	1	1	lhu
-	n12												Rm4-1				-
-SB	Rm0	0	0	0	n4-0					0	1	0	0	0	1	1	sb
-	n11-5							Rs					Rm4-1				-
-SH	Rm0	0	0	1	n4-0					0	1	0	0	0	1	1	sh
-	n11-5							Rs					Rm4-1				-
-SW	Rm0	0	1	0	n4-0					0	1	0	0	0	1	1	sw
-	n11-5							Rs					Rm4-1				-
 ADDI	Rm0	0	0	0	Rd					0	0	1	0	0	1	1	addi
 	n12												Rm4-1				-
 SLTI	Rm0	0	1	0	Rd					0	0	1	0	0	1	1	slti
@@ -244,6 +219,59 @@ OR	Rm0	1	1	0	Rd					0	1	1	0	0	1	1	or
 	0	0	0	0	0	0	0	Rs					Rm4-1				-
 AND	Rm0	1	1	1	Rd					0	1	1	0	0	1	1	and
 	0	0	0	0	0	0	0	Rs					Rm4-1				-
+*/})
+</script>
+
+<table id="t9902a" class=tarmasm></table>
+<script>
+makeTable("t9902a", function() {/*
+32bitメモリアクセス	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	op
+LB	Rm0	0	0	0	Rd					0	0	0	0	0	1	1	lb
+	n12												Rm4-1				-
+LH	Rm0	0	0	1	Rd					0	0	0	0	0	1	1	lh
+	n12												Rm4-1				-
+LW	Rm0	0	1	0	Rd					0	0	0	0	0	1	1	lw
+	n12												Rm4-1				-
+LBU	Rm0	1	0	0	Rd					0	0	0	0	0	1	1	lbu
+	n12												Rm4-1				-
+LHU	Rm0	1	0	1	Rd					0	0	0	0	0	1	1	lhu
+	n12												Rm4-1				-
+SB	Rm0	0	0	0	n4-0					0	1	0	0	0	1	1	sb
+	n11-5							Rs					Rm4-1				-
+SH	Rm0	0	0	1	n4-0					0	1	0	0	0	1	1	sh
+	n11-5							Rs					Rm4-1				-
+SW	Rm0	0	1	0	n4-0					0	1	0	0	0	1	1	sw
+	n11-5							Rs					Rm4-1				-
+*/})
+</script>
+
+<table id="t9903a" class=tarmasm></table>
+<script>
+makeTable("t9903a", function() {/*
+32bit分岐	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	op
+JAL	n15-12				Rd					1	1	0	1	1	1	1	jal
+	n20	n10-1										n11	n19-16				-
+JALR	Rs0	0	0	0	Rd					1	1	0	0	1	1	1	jalr
+	n12												Rs4-1				-
+BEQ	Rm0	0	0	0	n4-1				n11	1	1	0	0	0	1	1	beq
+	n12	n10-5						Rs					Rm4-1				-
+BNE	Rm0	0	0	1	n4-1				n11	1	1	0	0	0	1	1	bne
+	n12	n10-5						Rs					Rm4-1				-
+BLT	Rm0	1	0	0	n4-1				n11	1	1	0	0	0	1	1	blt
+	n12	n10-5						Rs					Rm4-1				-
+BGE	Rm0	1	0	1	n4-1				n11	1	1	0	0	0	1	1	bge
+	n12	n10-5						Rs					Rm4-1				-
+BLTU	Rm0	1	1	0	n4-1				n11	1	1	0	0	0	1	1	bltu
+	n12	n10-5						Rs					Rm4-1				-
+BGEU	Rm0	1	1	1	n4-1				n11	1	1	0	0	0	1	1	bgeu
+	n12	n10-5						Rs					Rm4-1				-
+*/})
+</script>
+
+<table id="t9904a" class=tarmasm></table>
+<script>
+makeTable("t9904a", function() {/*
+32bitその他	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	op
 FENCE	0	0	0	0	0	0	0	0	0	0	0	0	1	1	1	1	fence
 	0	0	0	0	PI	PO	PR	PW	SI	SO	SR	SW	0	0	0	0	-
 FENCE.TSO	0	0	0	0	0	0	0	0	0	0	0	0	1	1	1	1	fence.tso
