--- a/rvasm.html
+++ b/rvasm.html
@@ -58,6 +58,7 @@ Rd = Rm	1	0	0	0	Rd					Rm					1	0	c.mv
 */})
 </script>
 ※RdはR0以外、R0=0固定<br>
+※n18の下位12ビットは0固定<br>
 
 <table id="t1188b" class=tarmasm></table>
 <script>
@@ -174,6 +175,7 @@ Rd = n32	n15-12				Rd					0	1	1	0	1	1	1	lui
 	n31-16																-
 */})
 </script>
+※n32の下位12ビットは0固定<br>
 
 <table id="t9901a" class=tarmasm></table>
 <script>
@@ -213,6 +215,8 @@ Rd = Rm &amp; Rs	Rm0	1	1	1	Rd					0	1	1	0	0	1	1	and
 	0	0	0	0	0	0	0	Rs					Rm4-1				-
 */})
 </script>
+※n32:4096byte単位<br>
+※ &gt;&gt; : 符号なし右シフト、&gt;&gt;&gt; : 符号付き右シフト<br>
 
 <table id="t9902a" class=tarmasm></table>
 <script>
@@ -236,6 +240,8 @@ Rd = [Rm + n12]L	Rm0	0	1	0	Rd					0	0	0	0	0	1	1	lw
 	n11-5							Rs					Rm4-1				-
 */})
 </script>
+※[]後の記号でメモリサイズと符号を表す（W:2byte、L:4byte、C:符号付き1byte、S:符号付き2byte）<br>
+※オフセットはサイズにかかわらず1byte単位<br>
 
 <table id="t9903a" class=tarmasm></table>
 <script>
@@ -251,6 +257,8 @@ Rd = LTU(Rm, Rs)	Rm0	0	1	1	Rd					0	1	1	0	0	1	1	sltu
 	0	0	0	0	0	0	0	Rs					Rm4-1				-
 */})
 </script>
+※Rmの方が小さければ1、そうでなければ0となる<br>
+※LTU:符号なし比較<br>
 
 <table id="t9904a" class=tarmasm></table>
 <script>
@@ -274,6 +282,8 @@ IF GEU(Rm, Rs) GOTO n12	Rm0	1	1	1	n4-1				n11	1	1	0	0	0	1	1	bgeu
 	n12	n10-5						Rs					Rm4-1				-
 */})
 </script>
+※n20,IF系のn12:飛び先とのハーフワード(2byte)数の差分<br>
+※JALRのn12:1byte単位<br>
 
 <table id="t9905a" class=tarmasm></table>
 <script>
