--- a/rvasm.html
+++ b/rvasm.html
@@ -264,26 +264,26 @@ Rd = LTU(Rm, Rs)	Rm0	0	1	1	Rd					0	1	1	0	0	1	1	sltu
 <script>
 makeTable("t9904a", function() {/*
 32bit分岐	15	14	13	12	11	10	9	8	7	6	5	4	3	2	1	0	op
-JAL Rd, n20	n15-12				Rd					1	1	0	1	1	1	1	jal
+JAL Rd, n21	n15-12				Rd					1	1	0	1	1	1	1	jal
 	n20	n10-1										n11	n19-16				-
 JALR Rd, Rs + n12	Rs0	0	0	0	Rd					1	1	0	0	1	1	1	jalr
 	n12												Rs4-1				-
-IF Rm = Rs GOTO n12	Rm0	0	0	0	n4-1				n11	1	1	0	0	0	1	1	beq
+IF Rm = Rs GOTO n13	Rm0	0	0	0	n4-1				n11	1	1	0	0	0	1	1	beq
 	n12	n10-5						Rs					Rm4-1				-
-IF Rm != Rs GOTO n12	Rm0	0	0	1	n4-1				n11	1	1	0	0	0	1	1	bne
+IF Rm != Rs GOTO n13	Rm0	0	0	1	n4-1				n11	1	1	0	0	0	1	1	bne
 	n12	n10-5						Rs					Rm4-1				-
-IF Rm &lt; Rs GOTO n12	Rm0	1	0	0	n4-1				n11	1	1	0	0	0	1	1	blt
+IF Rm &lt; Rs GOTO n13	Rm0	1	0	0	n4-1				n11	1	1	0	0	0	1	1	blt
 	n12	n10-5						Rs					Rm4-1				-
-IF Rm &gt;= Rs GOTO n12	Rm0	1	0	1	n4-1				n11	1	1	0	0	0	1	1	bge
+IF Rm &gt;= Rs GOTO n13	Rm0	1	0	1	n4-1				n11	1	1	0	0	0	1	1	bge
 	n12	n10-5						Rs					Rm4-1				-
-IF LTU(Rm, Rs) GOTO n12	Rm0	1	1	0	n4-1				n11	1	1	0	0	0	1	1	bltu
+IF LTU(Rm, Rs) GOTO n13	Rm0	1	1	0	n4-1				n11	1	1	0	0	0	1	1	bltu
 	n12	n10-5						Rs					Rm4-1				-
-IF GEU(Rm, Rs) GOTO n12	Rm0	1	1	1	n4-1				n11	1	1	0	0	0	1	1	bgeu
+IF GEU(Rm, Rs) GOTO n13	Rm0	1	1	1	n4-1				n11	1	1	0	0	0	1	1	bgeu
 	n12	n10-5						Rs					Rm4-1				-
 */})
 </script>
-※n20,IF系のn12:飛び先とのハーフワード(2byte)数の差分<br>
-※JALRのn12:1byte単位<br>
+※n21,n13(IF系):飛び先とのハーフワード(2byte)数の差分<br>
+※n12(JALR):1byte単位<br>
 
 <table id="t9905a" class=tarmasm></table>
 <script>
