add support of ORG and ORGR

--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@ window.onload = function() {
 DATA/DATABは1バイトずつ、DATAWは2バイトずつ、DATALは4バイトずつである。</dd>
 <dt>MODE (M0|RV32C)</dt>
 <dd>命令セットを切り替える。デフォルトはM0である。</dd>
+<dt>ORG 値</dt>
+<dd>出力位置(アドレス)を設定する。</dd>
+<dt>ORGR 値</dt>
+<dd>出力位置(アドレス)をstart addressとの差分で設定する。</dd>
 </dl>
 </div>
 
