add support of ALIGN

--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@ DATA/DATABは1バイトずつ、DATAWは2バイトずつ、DATALは4バイトず
 <dd>出力位置(アドレス)を設定する。</dd>
 <dt>ORGR 値</dt>
 <dd>出力位置(アドレス)をstart addressとの差分で設定する。</dd>
+<dt>ALIGN 割る値[, 余り[, 埋める値]]</dt>
+<dd>出力位置(アドレス)を「割る値」で割った余りが「余り」になるように調整する。
+「余り」を省略した場合は余りが0になるようにする。
+「埋める値」を指定した場合、出力位置が条件を満たすまでその値(2バイト)で埋める。</dd>
 </dl>
 </div>
 
