add support of SPACE

--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@ DATA/DATABは1バイトずつ、DATAWは2バイトずつ、DATALは4バイトず
 <dd>出力位置(アドレス)を「割る値」で割った余りが「余り」になるように調整する。
 「余り」を省略した場合は余りが0になるようにする。
 「埋める値」を指定した場合、出力位置が条件を満たすまでその値(2バイト)で埋める。</dd>
+<dt>SPACE 増分[, 埋める値]</dt>
+<dd>出力位置(アドレス)を指定した「増分」バイト進める。
+「埋める値」を指定した場合、出力位置が条件を満たすまでその値(2バイト)で埋める。</dd>
 </dl>
 </div>
 
