--- a/index.html
+++ b/index.html
@@ -87,9 +87,11 @@ DATA/DATABは1バイトずつ、DATAWは2バイトずつ、DATALは4バイトず
 <dt>ORGR 値</dt>
 <dd>出力位置(アドレス)をstart addressとの差分で設定する。</dd>
 <dt>ALIGN 割る値[, 余り[, 埋める値]]</dt>
-<dd>出力位置(アドレス)を「割る値」で割った余りが「余り」になるように調整する。
+<dd>出力位置(アドレス)を進め、「割る値」で割った余りが「余り」になるように調整する。
 「余り」を省略した場合は余りが0になるようにする。
 「埋める値」を指定した場合、出力位置が条件を満たすまでその値(2バイト)で埋める。</dd>
+<dt>ALIGNR 割る値[, 余り[, 埋める値]]</dt>
+<dd>出力位置の代わりに「出力位置(アドレス)とstart addressの差分」をALIGNと同様に調整する。</dd>
 <dt>SPACE 増分[, 埋める値]</dt>
 <dd>出力位置(アドレス)を指定した「増分」バイト進める。
 「埋める値」を指定した場合、出力位置が条件を満たすまでその値(2バイト)で埋める。</dd>
