--- a/cpuemu.html
+++ b/cpuemu.html
@@ -16,7 +16,46 @@ body {
 <script src="ijfont.js"></script>
 <script>"use strict";
 
-var CPU = function() {
+var MEM = function() {
+	return {
+		ram: [],
+		check: function(ad, len) {
+			for (var i = 0; i < len; i++) {
+				if (isNaN(this.ram[ad + i])) return false;
+			}
+			return true;
+		},
+		get: function(ad) {
+			if (isNaN(this.ram[ad])) return 0;
+			return this.ram[ad];
+		},
+		set: function(ad, n) {
+			this.ram[ad] = n & 0xff;
+			if (this.notify) this.notify(ad);
+		},
+		get16: function(ad) {
+			var n = this.get(ad);
+			n |= this.get(ad + 1) << 8;
+			return n;
+		},
+		set16: function(ad, n) {
+			this.set(ad, n & 0xff);
+			this.set(ad + 1, (n >> 8) & 0xff);
+		},
+		get32: function(ad) {
+			var n = this.get16(ad);
+			n |= this.get16(ad + 2) << 16;
+			if (n < 0) n += 0x100000000;
+			return n;
+		},
+		set32: function(ad, n) {
+			this.set16(ad, n & 0xffff);
+			this.set16(ad + 2, (n >> 16) & 0xffff);
+		},
+	};
+}
+
+var CPU_M0 = function() {
 	this.r = []; // var:0-7, sp:13, link:14, pc:15
 	this.status = {
 		get: function() {
@@ -64,42 +103,7 @@ var CPU = function() {
 	};
 	this.reset();
 	
-	this.mem = {
-		ram: [],
-		check: function(ad, len) {
-			for (var i = 0; i < len; i++) {
-				if (isNaN(this.ram[ad + i])) return false;
-			}
-			return true;
-		},
-		get: function(ad) {
-			if (isNaN(this.ram[ad])) return 0;
-			return this.ram[ad];
-		},
-		set: function(ad, n) {
-			this.ram[ad] = n & 0xff;
-			if (this.notify) this.notify(ad);
-		},
-		get16: function(ad) {
-			var n = this.get(ad);
-			n |= this.get(ad + 1) << 8;
-			return n;
-		},
-		set16: function(ad, n) {
-			this.set(ad, n & 0xff);
-			this.set(ad + 1, (n >> 8) & 0xff);
-		},
-		get32: function(ad) {
-			var n = this.get16(ad);
-			n |= this.get16(ad + 2) << 16;
-			if (n < 0) n += 0x100000000;
-			return n;
-		},
-		set32: function(ad, n) {
-			this.set16(ad, n & 0xffff);
-			this.set16(ad + 2, (n >> 16) & 0xffff);
-		},
-	};
+	this.mem = new MEM();
 	this.step = function() {
 		var iaddr = this.r[15];
 		if (iaddr === 0xDEADBEEE) { // 0xDEADBEEF & 0xfffffffe
@@ -657,62 +661,205 @@ var CPU = function() {
 	};
 };
 
-window.onload = function() {
-	var cpu = new CPU();
+var CPU_RV32C = function() {
+	this.r = [];
+	this.pc = 0;
+	this.instCount = 0;
+	this.reset = function() {
+		for (var i = 0; i < 32; i++)
+			this.r[i] = 0;
+		this.pc = 0;
+		this.instCount = 0;
+	};
+	this.reset();
 	
+	this.mem = new MEM();
+	this.step = function() {
+		var iaddr = this.pc;
+		if (iaddr === 0xDEADBEEE) { // 0xDEADBEEF & 0xfffffffe
+			// instead of stopping execution at RET
+			return 0;
+		}
+//		if (iaddr % 2 != 0) {
+//			alert ("unaligned instructon read #" + iaddr.toString(16));
+//			return 0;
+//		}
+		if (!this.mem.check(iaddr, 2) && get("uninitialized_memory").value === "halt") {
+			alert("read instruction from uninitialized memory #" + iaddr.toString(16));
+			return 0;
+		}
+		var code = this.mem.get16(iaddr);
+//		this.code = code;
+		this.pc += 2;
+		this.instCount++;
+		if (this.pc >= 0x100000000) this.pc -= 0x100000000;
+//		console.log(code.toString(2));
+//		alert(code.toString(2));
+		try {
+			var getu = function(start, n) {
+				return (code >> start) & ((1 << n) - 1);
+			};
+			var getn = function(start, n) {
+				var res = (code >> start) & ((1 << n) - 1);
+				if ((res >> (n - 1)) != 0)
+					return res - (1 << n);
+				return res;
+			};
+			var norm = function(n) {
+				var v = 0x100000000;
+				while (n >= v) n -= v;
+				while (n < 0) n += v;
+				return n;
+			};
+			var checkmem = function(addr, n, iswrite) {
+//				if (addr % n != 0) {
+//					throw "unaligned memory " + (iswrite ? "write" : "read") +
+//						" #" + addr.toString(16);
+//				}
+				if (!iswrite && !this.mem.check(addr, n) &&
+				get("uninitialized_memory").value === "halt") {
+					throw "read from uninitialized memory #" + addr.toString(16);
+				}
+			};
+			var unsupported = function() {
+				if (get("unsupported_op").value === "halt") {
+					throw "unsupported instruction";
+				}
+			};
+			unsupported();
+		} catch(e) {
+			var inst = code.toString(2);
+			while (inst.length < 16) inst = "0" + inst;
+			alert("" + e + "\n\ninstruction address: #" + iaddr.toString(16) +
+				"\ninstruction: " + inst);
+			return 0;
+		}
+//		dump(this.r);
+		return 1;
+	};
+};
+
+window.onload = function() {
+	var MODE_M0 = 0;
+	var MODE_RV32C = 1;
+	
+	var cpu_m0 = new CPU_M0();
+	var cpu_rv32c = new CPU_RV32C();
+	var cpu = cpu_m0;
+	var cpu_mode = MODE_M0;
+	
+	var parseRegValue = function(rawRes) {
+		var res = null;
+		if (rawRes !== null) {
+			rawRes = rawRes.replace(/\s+/g, "");
+			if (rawRes.substr(0, 1) == '`') {
+				res = parseInt(rawRes.substr(1), 2);
+			} else if (rawRes.substr(0, 1) == '#') {
+				res = parseInt(rawRes.substr(1), 16);
+			} else {
+				res = parseInt(rawRes);
+			}
+			if (!isNaN(res)) {
+				res = res & 0xffffffff;
+				if (res < 0) res += 0x100000000;
+			}
+		}
+		return res;
+	};
+	
+	var regshow_m0 = create("div");
 	for (var i = 0; i < 16; i++) {
 		var r = create("div");
 		r.textContent = "R" + i + ": ";
 		r.ondblclick = (function(idx) {
 			return function() {
-				var rawRes = prompt("R" + idx + "の値を入力", cpu.r[idx]);
-				if (rawRes !== null) {
-					rawRes = rawRes.replace(/\s+/g, "");
-					var res;
-					if (rawRes.substr(0, 1) == '`') {
-						res = parseInt(rawRes.substr(1), 2);
-					} else if (rawRes.substr(0, 1) == '#') {
-						res = parseInt(rawRes.substr(1), 16);
-					} else {
-						res = parseInt(rawRes);
-					}
-					if (!isNaN(res)) {
-						res = res & 0xffffffff;
-						if (res < 0) res += 0x100000000;
-						cpu.r[idx] = res;
-						showRegs();
-					}
+				var rawRes = parseRegValue(prompt("R" + idx + "の値を入力", cpu.r[idx]));
+				if (rawRes !== null && !isNaN(res)) {
+					cpu.r[idx] = res;
+					showRegs();
 				}
 			};
 		})(i);
-		get("regs").appendChild(r);
+		regshow_m0.appendChild(r);
 	}
 	var flgnames = ["Negative", "Zero", "Carry", "Overflow"];
 	for (var i = 0; i < 4; i++) {
 		var r = create("div");
 		r.textContent = flgnames[i] + "-flg: ";
-		get("regs").appendChild(r);
+		regshow_m0.appendChild(r);
 	}
 	{
 		var r = create("div");
 		r.style["margin-top"] = "1em";
 		r.textContent = "Clock: ";
-		get("regs").appendChild(r);
+		regshow_m0.appendChild(r);
 	}
-	var showRegs = function() {
-		var rs = get("regs").childNodes;
-		for (var i = 0; i < 16; i++) {
-			var negative = "";
-			if (cpu.r[i] & 0x80000000) {
-				negative = " (" + (cpu.r[i] - 0x100000000) + ")";
-			}
-			rs[i].textContent = "R" + i + ": " + cpu.r[i] + negative + " #" + cpu.r[i].toString(16);
+	get("regs").appendChild(regshow_m0);
+	
+	var regshow_rv32c = create("div");
+	for (var i = 0; i < 32; i++) {
+		var r = create("div");
+		r.textContent = "R" + i + ": ";
+		if (i !== 0) {
+			r.ondblclick = (function(idx) {
+				return function() {
+					var rawRes = parseRegValue(prompt("R" + idx + "の値を入力", cpu.r[idx]));
+					if (rawRes !== null && !isNaN(res)) {
+						cpu.r[idx] = res;
+						showRegs();
+					}
+				};
+			})(i);
 		}
-		rs[16].textContent = flgnames[0] + "-flg: " + cpu.status.n;
-		rs[17].textContent = flgnames[1] + "-flg: " + cpu.status.z;
-		rs[18].textContent = flgnames[2] + "-flg: " + cpu.status.c;
-		rs[19].textContent = flgnames[3] + "-flg: " + cpu.status.v;
-		rs[20].textContent = "Clock: " + cpu.clockCount;
+		regshow_rv32c.appendChild(r);
+	}
+	{
+		var r = create("div");
+		r.textContent = "PC: ";
+		r.ondblclick =  function() {
+			var rawRes = parseRegValue(prompt("PCの値を入力", cpu.pc));
+			if (rawRes !== null && !isNaN(res)) {
+				cpu.pc = res;
+				showRegs();
+			}
+		};
+		regshow_rv32c.appendChild(r);
+		
+		var r2 = create("div");
+		r2.style["margin-top"] = "1em";
+		r2.textContent = "Insts: ";
+		regshow_rv32c.appendChild(r2);
+	}
+	regshow_rv32c.style.display = "none";
+	get("regs").appendChild(regshow_rv32c);
+	
+	var showRegs = function() {
+		if (cpu_mode === MODE_M0) {
+			var rs = regshow_m0.childNodes;
+			for (var i = 0; i < 16; i++) {
+				var negative = "";
+				if (cpu.r[i] & 0x80000000) {
+					negative = " (" + (cpu.r[i] - 0x100000000) + ")";
+				}
+				rs[i].textContent = "R" + i + ": " + cpu.r[i] + negative + " #" + cpu.r[i].toString(16);
+			}
+			rs[16].textContent = flgnames[0] + "-flg: " + cpu.status.n;
+			rs[17].textContent = flgnames[1] + "-flg: " + cpu.status.z;
+			rs[18].textContent = flgnames[2] + "-flg: " + cpu.status.c;
+			rs[19].textContent = flgnames[3] + "-flg: " + cpu.status.v;
+			rs[20].textContent = "Clock: " + cpu.clockCount;
+		} else if (cpu_mode == MODE_RV32C) {
+			var rs = regshow_rv32c.childNodes;
+			for (var i = 0; i < 32; i++) {
+				var negative = "";
+				if (cpu.r[i] & 0x80000000) {
+					negative = " (" + (cpu.r[i] - 0x100000000) + ")";
+				}
+				rs[i].textContent = "R" + i + ": " + cpu.r[i] + negative + " #" + cpu.r[i].toString(16);
+			}
+			rs[32].textContent = "PC: " + cpu.pc + " #" + cpu.pc.toString(16);
+			rs[33].textContent = "Insts: " + cpu.instCount;
+		}
 	};
 	
 	var memDumpStartAddress = 0;
@@ -787,7 +934,7 @@ window.onload = function() {
 			}
 		}
 	};
-	cpu.mem.notify = function(addr) {
+	var memNotifyFunc = function(addr) {
 		var daddr = addr - memDumpStartAddress;
 		if (0 <= daddr && daddr < 0x1000) {
 			var f = memDumpFunc();
@@ -804,6 +951,8 @@ window.onload = function() {
 					f(cpu.mem.get32(addrl * 4 + memDumpStartAddress), 4) : "????????";
 		}
 	};
+	cpu_m0.mem.notify = memNotifyFunc;
+	cpu_rv32c.mem.notify = memNotifyFunc;
 	var memDumpUpdateAll = function() {
 		var f = memDumpFunc();
 		for (var i = 0; i < 0x1000; i++) {
@@ -851,12 +1000,31 @@ window.onload = function() {
 	
 	var prevRealMode = 0;
 	var reset = function() {
+		var newMode = parseInt(get("cpu_select").value);
+		if (newMode === MODE_M0) {
+			cpu = cpu_m0;
+			regshow_m0.style.display = "";
+			regshow_rv32c.style.display = "none";
+			cpu_mode = MODE_M0;
+		} else if (newMode === MODE_RV32C) {
+			cpu = cpu_rv32c;
+			regshow_m0.style.display = "none";
+			regshow_rv32c.style.display = "";
+			cpu_mode = MODE_RV32C;
+		}
 		var realMode = parseInt(get("real_mode").value);
 		cpu.reset();
-		cpu.r[1] = 0x100;
-		cpu.r[13] = 0x1000; // SP
-		cpu.r[14] = 0xDEADBEEF; // LR
-		cpu.r[15] = 0; // PC
+		if (cpu_mode === MODE_M0) {
+			cpu.r[1] = 0x100;
+			cpu.r[13] = 0x1000; // SP
+			cpu.r[14] = 0xDEADBEEF; // LR
+			cpu.r[15] = 0; // PC
+		} else if (cpu_mode === MODE_RV32C) {
+			cpu.r[11] = 0x100;
+			cpu.r[2] = 0x1000; // SP
+			cpu.r[1] = 0xDEADBEEF; // RA
+			cpu.pc = 0;
+		}
 		cpu.mem.ram = [];
 		if (realMode > 0 && prevRealMode === 0 && memDumpStartAddress === 0) {
 			memDumpStartAddress = 0x10000000;
@@ -885,17 +1053,31 @@ window.onload = function() {
 				cpu.mem.set(cram_addr + i, font[i + 0xe0 * 8]);
 			}
 			if (realMode >= 11) {
-				cpu.r[1] = cram_addr - 0x700;
-				cpu.r[2] = crom_addr;
+				if (cpu_mode === MODE_M0) {
+					cpu.r[1] = cram_addr - 0x700;
+					cpu.r[2] = crom_addr;
+				} else if (cpu_mode === MODE_RV32C) {
+					cpu.r[11] = cram_addr - 0x700;
+					cpu.r[12] = crom_addr;
+				}
 			}
 			if (realMode >= 12) {
 				for (var i = 0; i < div_data.length; i++) {
 					cpu.mem.set(div_addr + i, div_data[i]);
 				}
-				cpu.r[3] = div_addr | 1;
+				if (cpu_mode === MODE_M0) {
+					cpu.r[3] = div_addr | 1;
+				} else if (cpu_mode === MODE_RV32C) {
+					cpu.r[13] = div_addr;
+				}
 			}
-			cpu.r[13] = 0x10001000;
-			cpu.r[15] = 0x10000000;
+			if (cpu_mode === MODE_M0) {
+				cpu.r[13] = 0x10001000;
+				cpu.r[15] = 0x10000000;
+			} else if (cpu_mode === MODE_RV32C) {
+				cpu.r[2] = 0x10001000;
+				cpu.pc = 0x10000000;
+			}
 		}
 		autoflg = false;
 		get("auto").textContent = "START";
@@ -967,7 +1149,7 @@ window.onload = function() {
 	margin-top: 20px;
 }
 #prog {
-	height: 400px;
+	height: 520px;
 	width: 14em;
 	display: inline-block;
 	font-size: 14px;
@@ -1054,6 +1236,10 @@ format:<select id="mem_format">
 <button id=reset>RESET</button>
 </div>
 <div id="config">
+CPUの種類は<select id="cpu_select">
+<option value="0" selected="selected">従来型</option>
+<option value="1">新型</option>
+</select><br>
 未サポートの命令<select id="unsupported_op">
 <option value="ignore">を無視</option>
 <option value="halt" selected="selected">で停止</option>
